# HAWRA

./: .gitignore  CITATION.cff  CONTRIBUTING.md  EXECUTIVE_SUMMARY.md  LAUNCH_TEMPLATES.md  LICENSE  METHODOLOGY_2025.md  Makefile  PRESS_KIT.md  README.md  ROADMAP_2026.md  STRUCTURE.md  WORKSPACE_AUDIT_AND_DATA_REPORT.md  bsim_adapter.py  codebase_map.md  concept_paper_outline.md  copy_assets.py  copy_bundle_files.py  copy_figures 2.py  debug_detailed_parse.py  debug_parser.py  debug_real_parse.py  demo.html  demo_bio_quantum.bsim.json  demo_pipeline.py  docker-compose.yml  docs.html  finalize_bundle.py  fix_underscores 2.py  index.html  migrate_bundle.py  output.json  plasmid_data.js  presentation.html  pyproject.toml  pytest.ini  requirements.txt  setup_github.sh  simple_demo.py  test_lexer_simple.py  (+1 more)
00_docs/: HAWRA_Comprehensive_Documentation.tex
02_arbol_interface/: gene_control.arbol
03_unified_simulator/: aggregate_outputs.py  analyze_comparison.py  analyze_pqpe.py  comparison_report.md  comparison_table.csv  comparison_table.html  comparison_table.json  comparison_table_best.csv  comparison_table_best.html  comparison_table_best.json  comparison_table_p700.csv  comparison_table_scored.csv  gene_control.bsim.json  main.py  pulses_40_1_5.arbol  pulses_40_1_5.bsim.json  pulses_40_3_10.arbol  pulses_40_3_10.bsim.json  pulses_60_1_5.bsim.json  validation.bsim.json
04_validation_benchmarks/: CERTIFICATION_REPORT.md  deutsch_jozsa.arbol  deutsch_jozsa.bsim.json  first_bloom.arbol  generate_certification_report.py  grover_search.arbol  grover_search.bsim.json
(+295 files in other folders)
